--- a/src/app/features/profile/components/profile-stats-card/profile-stats-card.component.html
+++ b/src/app/features/profile/components/profile-stats-card/profile-stats-card.component.html
@@ -61,6 +61,8 @@
             [alt]="userStats.name || userStats.login"
             width="100"
             height="100"
+            loading="lazy"
+            decoding="async"
           />
           <div class="stats-card__info">
             <div class="stats-card__info-left">
